[gd_scene load_steps=4 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://game/main.gd" id="1"]
[ext_resource type="Script" path="res://game/camera_controller.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://world_environment_node" path="res://assets/materials/world_environment.tscn" id="3"]

[node name="Main" type="Node3D"]
script = ExtResource("1")

[node name="WorldEnvironment" parent="." instance=ExtResource("3")]

[node name="CameraController" type="Camera3D" parent="."]
unique_name_in_owner = true
script = ExtResource("2")
fov = 60.0
near = 0.1
far = 100.0
position = Vector3(0, 10, 25)

[node name="VortexContainer" type="Node3D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LotteryButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -30.0
offset_right = 100.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "开始抽奖"
